// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DatasetDistribution correctly 1`] = `
<section
  className="fdk-distribution-item mb-1"
>
  <ListRegular
    bottomMargin={false}
    title={null}
  >
    <div>
      <div
        className="d-flex list-regular--item text-left"
      >
        <div
          className="col-4 pl-0"
        >
          <span>
            <strong>
              Format
            </strong>
          </span>
        </div>
        <div
          className="col-8"
        >
          <span
            key="0"
          >
            GPX
          </span>
        </div>
        <button
          onClick={[Function]}
          type="button"
        >
          <i
            className="fa fdk-color-link fa-chevron-down"
          />
        </button>
      </div>
      <div
        className="d-flex list-regular--item text-left mb-2 closedCollapse"
      >
        <div
          className="col-4 pl-0 fdk-text-strong"
        >
          Description
        </div>
        <div
          className="col-8 show-more__cropped-box"
        >
          Datasettet avgrenser område for virkeområdet til lov 6. juni 2009 nr. 35 om naturområder i Oslo og nærliggende kommuner (markaloven) som trådte i kraft 1. september 2009. Markalovens virkeområde er fastsatt i forskrift 4. september 2015 nr. 1032 om justering av markagrensen fastlegger markalovens geografiske virkeområde med tilhørende kart.
        </div>
      </div>
    </div>
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <TwoColRow
        col1="AccessURL"
        col1Width={null}
        col2={
          Array [
            <LinkExternal
              openInNewTab={false}
              prefLabel="https://kartkatalog.geonorge.no/metadata/uuid/45e9ba77-388c-40eb-87df-e34e9d9ab300"
              uri="https://kartkatalog.geonorge.no/metadata/uuid/45e9ba77-388c-40eb-87df-e34e9d9ab300"
            />,
          ]
        }
        col2Width={null}
      />
    </Collapse>
  </ListRegular>
</section>
`;

exports[`should render DatasetDistribution correctly with no props 1`] = `
<section
  className="fdk-distribution-item mb-1"
>
  <ListRegular
    bottomMargin={false}
    title={null}
  >
    <div />
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    />
  </ListRegular>
</section>
`;
